# lib86cpu

./: .gitignore  .gitmodules  BuildConfigH.cmake  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: ci.yml
CMake/: BuildConfigH.cmake  FindLLVM.cmake
include/: config.h  config.hpp.cmake  lib86cpu.h  lib86cpu.hpp  platform.h  platform.hpp  types.h  types.hpp
lib86cpu/: CMakeLists.txt  as.h  endianness.h  endianness.hpp  interface.cpp  interval_tree.h  lib86cpu.h  lib86cpu_priv.h  lib86cpu_priv.hpp  osfunc.cpp  platform.h  support.cpp  support.h  support.hpp  types.h
lib86cpu/core/: allocator.cpp  allocator.h  allocator.hpp  breakpoint.cpp  breakpoint.h  breakpoint.hpp  decode.cpp  decode.h  decode.hpp  fpu.cpp  fpu.h  fpu.hpp  fpu_instructions.cpp  frontend.cpp  frontend.h  helpers.cpp  helpers.h  helpers.hpp  init.cpp  instructions.cpp  instructions.h  instructions.hpp  internal.h  internal.hpp  memory.cpp  memory.h  memory_management.cpp  memory_management.h  memory_management.hpp  registers.h  registers.hpp  translate.cpp
lib86cpu/core/emitter/: common.h  emitter_common.cpp  emitter_common.h  emitter_common.hpp
lib86cpu/core/emitter/x64/: jit.cpp  jit.h  jit.hpp  support.cpp
lib86cpu/core/emitter/x64/linux/: ipt.cpp  ipt.h  ipt.hpp
lib86cpu/core/emitter/x64/windows/: ipt.cpp  ipt.h  ipt.hpp
lib86cpu/core/linux/: allocator.cpp  allocator.h  clock.cpp  clock.h  clock.hpp  os_exceptions.cpp  os_exceptions.hpp  os_mem.cpp  os_mem.h  os_mem.hpp  x64_exceptions.cpp
lib86cpu/core/windows/: allocator.cpp  allocator.h  clock.cpp  clock.h  clock.hpp  os_exceptions.cpp  os_exceptions.h  os_mem.cpp  os_mem.h  x64_exceptions.cpp
lib86cpu/dbg/: debugger.cpp  debugger.h  imgui_memory_editor.hpp  imgui_wnd.cpp  imgui_wnd.h  imgui_wnd.hpp  main_wnd.cpp  main_wnd.hpp
lib86cpu/dbg/glad/: glad.c
lib86cpu/dbg/glad/glad/: glad.h
lib86cpu/x86/: arch.cpp  breakpoint.cpp  decode.cpp  decode.h  disasm.cpp  disasm_att.cpp  disasm_intel.cpp  frontend.cpp  frontend.h  helpers.cpp  helpers.h  init.cpp  instructions.cpp  instructions.h  internal.h  isa.h  jit.cpp  jit.h  memory.cpp  memory.h  registers.h  translate.cpp
lib86cpu/x86/windows/: allocator.cpp  allocator.h  clock.cpp  clock.h
projects/imgui/: CMakeLists.txt
test/: CMakeLists.txt  debug.cpp  hook.cpp  kernel.cpp  run.cpp  run.h  run.hpp  test386.cpp  test386.h  test80186.cpp
x86/: CMakeLists.txt  jit.cpp  jit.h  x86_arch.cpp  x86_decode.cpp  x86_decode.h  x86_disasm.cpp  x86_disasm_att.cpp  x86_disasm_intel.cpp  x86_exceptions.cpp  x86_frontend.cpp  x86_frontend.h  x86_instr.h  x86_internal.h  x86_isa.h  x86_memory.cpp  x86_memory.h  x86_translate.cpp  x86_types.h
x86/windows/: allocator.cpp  allocator.h
x86cpu/: CMakeLists.txt  interface.cpp  platform.h  types.h  x86cpu.h
